--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
+
 /* common style  */
-.btn{
+.btn {
     color: white;
     background-color: #E55473;
     padding: 10px 25px;
@@ -33,7 +34,7 @@
     color: #272727;
     font-size: 55px;
     font-weight: 800;
-    
+
 }
 
 .banner_title p {
@@ -49,4 +50,72 @@
     width: 400px;
     height: 450px;
     margin-top: 50px;
+}
+
+/* Feature Style  */
+
+.feature_title {
+    width: 33%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+.feature_container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+
+}
+
+.feature_box_1,
+.feature_box_2,
+.feature_box_3 {
+    height: 300px;
+    width: 280px;
+    margin-top: 40px;
+    border-radius: 200px 200px 0px 0px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.feature_box_1 {
+    background-color: rgba(167, 33, 98, 0.15);
+
+}
+
+.feature_box_2 {
+    background-color: rgba(5, 151, 160, 0.15);
+
+}
+
+.feature_box_3 {
+    background-color: rgba(71, 125, 17, 0.15);
+}
+
+.feature_box_1 img,
+.feature_box_2 img,
+.feature_box_3 img {
+    width: 170px;
+    height: 250px;
+    margin-top: 50px;
+}
+
+.feature_box_2 img {
+    margin-top: 80px;
+    width: 220px;
+    height: 190px;
+}
+
+.box_caption {
+    color: #272727;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+    margin-top: 5px;
 }
