--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@
     border-radius: 5px;
 }
 
+.main_title {
+    width: 33%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
 /* banner style  */
 .banner_container {
     width: 100%;
@@ -54,19 +61,13 @@
 
 /* Feature Style  */
 
-.feature_title {
-    width: 33%;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 80px;
-}
+
 
 .feature_container {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    gap: 50px;
+    justify-content: space-between;
 
 }
 
@@ -118,4 +119,126 @@
     line-height: 35px;
     text-decoration-line: underline;
     margin-top: 5px;
+}
+
+/* Info Box Style  */
+
+.info_box_container {
+    display: flex;
+    width: 70%;
+    background-color: rgba(39, 39, 39, 0.05);
+    margin: 70px auto;
+    justify-content: space-around;
+    align-items: center;
+    padding: 40px 0 30px 0;
+    border-radius: 5px;
+}
+
+.info_box_container img {
+    width: 40px;
+    height: 40px;
+}
+
+.info_box_part {
+    text-align: center;
+}
+
+.info_box_part p {
+    color: rgba(39, 39, 39, 0.80);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 35px;
+}
+
+/* main banner style  */
+
+.main_banner {
+    width: 100%;
+    height: 400px;
+    background: rgba(229, 84, 115, 0.05);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+
+}
+
+
+.main_banner_title h1 {
+    text-align: center;
+}
+
+.main_banner_title p {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.main_banner_btn {
+    width: 100px;
+    margin: 0 auto;
+}
+
+.main_banner img {
+    width: 220px;
+    height: 280px;
+}
+
+.image_container {
+    display: flex;
+    width: 70%;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.image_container img {
+    width: 225px;
+    height: 270px;
+}
+
+/* subscription style  */
+
+.subscription_container {
+    width: 70%;
+    height: 300px;
+    margin: 80px auto;
+    background-image: url('./Flower Asset/Rectangle 9.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+.subscription_container input[type='email'] {
+    width: 400px;
+    padding: 10px;
+    border: 0;
+    margin-right: 8px;
+    border-radius: 4px;
+}
+
+/* Footer style  */
+
+footer {
+    background-color: rgb(22, 21, 21);
+    width: 100%;
+    color: white;
+    height: 350px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+footer span{
+    color:  #E55473;;
 }
