--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     border: none;
     margin-top: 15px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .main_title {
@@ -20,6 +21,10 @@
     text-align: center;
     margin: 0 auto;
     margin-top: 80px;
+}
+
+span {
+    color: #E55473;
 }
 
 /* banner style  */
@@ -201,13 +206,14 @@
     height: 270px;
 }
 
+
 /* subscription style  */
 
 .subscription_container {
     width: 70%;
     height: 300px;
     margin: 80px auto;
-    background-image: url('./Flower Asset/Rectangle 9.png');
+    background-image: url('./Flower Asset/Rectangle_9.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -215,6 +221,13 @@
     flex-direction: column;
     align-items: center;
 
+}
+
+.subscription_container_title small {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 30px;
 }
 
 
@@ -226,10 +239,59 @@
     border-radius: 4px;
 }
 
+/* Feedback style  */
+
+.feedback_container {
+    display: flex;
+    width: 100%;
+    height: 500px;
+    background-color: rgba(229, 84, 115, 0.10);
+    justify-content: space-around;
+    padding-top: 50px;
+    gap: 50px;
+}
+
+.feedback_container input[type='text'] {
+    width: 461px;
+    height: 64px;
+    border: none;
+    padding: 0 13px;
+    margin-top: 20px;
+}
+
+.feedback_container input[type='email'] {
+    width: 461px;
+    height: 64px;
+    border: none;
+    padding: 0 13px;
+    margin-top: 20px;
+}
+
+.feedback_title p {
+    color: #7c7474;
+}
+
+.icon {
+    margin-top: 15px;
+    display: flex;
+    gap: 40px;
+    cursor: pointer;
+}
+
+textarea {
+    width: 461px;
+    border: 0;
+    margin-top: 20px;
+    padding: 20px 13px;
+    height: 100px;
+    border: 1px solid black;
+
+}
+
 /* Footer style  */
 
 footer {
-    background-color: rgb(22, 21, 21);
+    background-color: rgb(32, 32, 32);
     width: 100%;
     color: white;
     height: 350px;
@@ -237,8 +299,9 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 80px;
 }
 
-footer span{
-    color:  #E55473;;
+span {
+    color: #E55473;
 }
